<?xml version="1.0"?>
<package>
	<name>test_pkg</name>
	<version>1.0.0</version>
	<description>A test package for automated generation of MSG files from MMSG file</description>
	<author email="adrianohrl@unifei.edu.br">Adriano Henrique Rossette Leite</author>
	<author email="ricardoej@gmail.com">Ricardo Emerson Júlio</author>
	<maintainer email="expertinos.unifei@gmail.com">Expertinos Autonomous Robotics Team</maintainer>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<!-- Building dependencies -->
	<!--<build_depend>message_generation</build_depend>-->
	<!--<build_depend>geometry_msgs</build_depend>-->
  	<!--<build_depend>nav_msgs</build_depend>-->
	<!--<build_depend>std_msgs</build_depend>-->

	<!-- Running dependencies -->
	<!--<run_depend>message_runtime</run_depend>-->
	<!--<run_depend>geometry_msgs</run_depend>-->
  	<!--<run_depend>nav_msgs</run_depend>-->
	<!--<run_depend>std_msgs</run_depend>-->
</package>
